2016-12-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c:
    Fixed this bug: "#298 GPASM command line help - bad printing"
    Thanks to Philippe Paternotte for the report.

2016-12-08  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcoffopt.c:
    Fixed this bug: "#296 gplink optimize-banksel breaks config fuse."
    Thanks to Yamada Tarou for the report.

2016-11-29  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpdis.c:
    Fixed this bug: "#297 gpdis.c:632: bad if test ?"
    Thanks to dcb for the report.

2016-10-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure:
    Fixed bug: "#295 CFLAGS should not override environment"
    Thanks to Daniel M. Weeks for the report.

2016-10-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure:
    Changed version from 1.5.0 to 1.5.1 .

2016-10-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Changed version from 1.5.0 to 1.5.1 .

  * gpasm/directive.c:
    Fixed bug: "#293 Error with -S2 flag and register in Access RAM"
    More uniform warnings.
    Thanks to "fseek" for the report.

2016-09-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gplink/gplink.c, gplink/gplink.h.in,
    man/gplink.1.in:
    Fixed this bug: "#292 usb registers missing for ..."
    Thanks to Fred for the report.

2016-08-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
    gputils 1.5.0 released.

2016-08-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c, gpasm/gpasm.h,
    gpasm/processor.c, libgputils/gpcoff.h:
    Fixed an assume bug.
    New built-in variable: __ASSUMED_BANK_ADDR

2016-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * config.h.in, configure, configure.ac, include/stdhdr.h,
    libgputils/gparchive.c, libgputils/gpsystem.c:
    Fixed the print format warnings.
